tests/resources/valid/error/handle.mamba
class MyErr1 isa Exception
class MyErr2 isa Exception

def f(x: Int) -> Int raises [MyErr1, MyErr2] =>
    if x < 0 then
        raise MyErr1()
    else
        if x > 10 then
            raise MyErr2()
        else
            return x + 2

def a <- f(10) handle
    err: MyErr1 =>
        print "Something went wrong"
        -1
    err: MyErr2 =>
        print "Something else went wrong"
        -2
